--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "axios": "^1.6.7",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
